AC_INIT([libsnapcraft-preload-classic-library-path], [0.1])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AM_PROG_AR
LT_INIT
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_CHECK_HEADERS([unistd.h])
AC_CHECK_FUNCS([strstr])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT


